# secgraph-runner

./: .gitignore  CMakeLists.txt
src/: ApplicationScenario.cpp  ApplicationScenario.hpp  GraphTheory.hpp  IOHandler.cpp  IOHandler.hpp  MessageContainer.hpp  RunnerState.hpp  SecGraphRunner.cpp  SecGraphRunner.hpp  main.cpp
